plugins {
    id 'org.springframework.boot' version '4.0.3'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'maven-publish'
    id 'java'
}

group = 'net.foulest'
description = 'OspreyProxy'

// Set the language level to Java 21
java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(21))
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.github.ben-manes.caffeine:caffeine:3.2.3'
    implementation 'com.bucket4j:bucket4j_jdk17-core:8.16.1'
    implementation 'org.apache.httpcomponents.client5:httpclient5:5.5'
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // Actuator + Micrometer - for metrics and health endpoints
    // https://docs.spring.io/spring-boot/docs/current/reference/html/actuator.html
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'io.micrometer:micrometer-registry-prometheus'

    // Resilience4j - for circuit breaking on upstream API providers
    // https://resilience4j.readme.io/docs/getting-started
    implementation 'io.github.resilience4j:resilience4j-spring-boot3:2.3.0'
    implementation 'io.github.resilience4j:resilience4j-micrometer:2.3.0'

    // JetBrains Annotations - for code inspection and documentation
    // https://mvnrepository.com/artifact/org.jetbrains/annotations
    compileOnly 'org.jetbrains:annotations:26.1.0'

    // Lombok - for reducing boilerplate code
    // https://projectlombok.org
    compileOnly 'org.projectlombok:lombok:1.18.42'
    annotationProcessor 'org.projectlombok:lombok:1.18.42'
}

tasks {
    bootJar {
        archiveFileName.set("${project.name}.jar")
        reproducibleFileOrder = true
        preserveFileTimestamps = false
    }

    bootRun {
        jvmArgs = [
                '-server',
                '-XX:+UseZGC',
                '-XX:+ZGenerational',
                '-XX:InitialRAMPercentage=12.5',
                '-XX:MaxRAMPercentage=25.0',
                '-XX:MaxDirectMemorySize=512m',
                '-XX:+UnlockDiagnosticVMOptions',
                '-XX:+DebugNonSafepoints',
                '-XX:+AlwaysPreTouch'
        ]
    }

    build {
        dependsOn(bootJar)
    }
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            groupId = 'net.foulest.ospreyproxy'
            artifactId = project.name
            version = project.version
            from components.java
        }
    }
}
